// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`avatar-bundle/AvatarBundle renders 102+ avatars with overflow count 1`] = `
.emotion-7 {
  display: inline-grid;
}

.emotion-2 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  z-index: 3;
}

.emotion-5 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  margin-left: 28px;
  z-index: 2;
  -webkit-clip-path: url(#avatar-bundle-clip-medium-default);
  clip-path: url(#avatar-bundle-clip-medium-default);
}

.emotion-6 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  background-color: #eeeeee;
  color: #3c3c3c;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
  margin-left: 56px;
  z-index: 1;
  -webkit-clip-path: url(#avatar-bundle-clip-medium-default);
  clip-path: url(#avatar-bundle-clip-medium-default);
  font-family: ArtifaktElement,sans-serif;
}

.emotion-0 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

.emotion-1 {
  background-color: #8f1d69;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

<span
  className="emotion-7"
>
  <span
    className="emotion-2"
  >
    <span
      aria-label="Avatar for Jon Snow"
      className="emotion-1"
      role="img"
    >
      <span
        aria-hidden="true"
        className="emotion-0"
      >
        JS
      </span>
    </span>
  </span>
  <span
    className="emotion-5"
  >
    <span
      aria-label="Avatar for Jon Snow"
      className="emotion-1"
      role="img"
    >
      <span
        aria-hidden="true"
        className="emotion-0"
      >
        JS
      </span>
    </span>
  </span>
  <span
    className="emotion-6"
  >
    +99
  </span>
  <svg
    height="0"
    width="0"
  >
    <defs>
      <clipPath
        id="avatar-bundle-clip-extraSmall-default"
      >
        <path
          d="M8,0A7.99573,7.99573,0,0,0,.53192,5.15033,8.97416,8.97416,0,0,1,1,8a8.97444,8.97444,0,0,1-.46808,2.84967A7.99708,7.99708,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-default"
      >
        <path
          d="M12,0A11.96993,11.96993,0,0,0,2.62366,4.52277,12.92789,12.92789,0,0,1,5,12a12.92789,12.92789,0,0,1-2.37634,7.47723A11.997,11.997,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-default"
      >
        <path
          d="M16,0A15.95822,15.95822,0,0,0,3.21405,6.41034,17.89223,17.89223,0,0,1,6,16a17.89223,17.89223,0,0,1-2.78595,9.58966A15.99273,15.99273,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-default"
      >
        <path
          d="M24,0A23.9858,23.9858,0,0,0,3.13654,12.143,25.87787,25.87787,0,0,1,6,24,25.87787,25.87787,0,0,1,3.13654,35.857,23.99887,23.99887,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-default"
      >
        <path
          d="M32,0A31.97919,31.97919,0,0,0,4.2691,16.03931,35.8408,35.8408,0,0,1,8,32,35.84061,35.84061,0,0,1,4.2691,47.96069,31.99833,31.99833,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-condensed"
      >
        <path
          d="M8,0A7.96023,7.96023,0,0,0,2.70648,2.01288,8.95524,8.95524,0,0,1,5,8a8.9552,8.9552,0,0,1-2.29352,5.98706A7.99653,7.99653,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-condensed"
      >
        <path
          d="M12,0A11.93118,11.93118,0,0,0,4.77905,2.432,12.95059,12.95059,0,0,1,9,12a12.95073,12.95073,0,0,1-4.22089,9.568A11.99458,11.99458,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-condensed"
      >
        <path
          d="M16,0A15.89989,15.89989,0,0,0,7.7016,2.33929,17.947,17.947,0,0,1,14,16,17.947,17.947,0,0,1,7.70154,29.66071,15.99314,15.99314,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-condensed"
      >
        <path
          d="M24,0A23.882,23.882,0,0,0,11.783,3.34351,25.95309,25.95309,0,0,1,22,24,25.95318,25.95318,0,0,1,11.783,44.65649,23.99952,23.99952,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-condensed"
      >
        <path
          d="M32,0A31.84991,31.84991,0,0,0,15.38861,4.64447,35.91,35.91,0,0,1,28,32,35.91,35.91,0,0,1,15.38861,59.35553,32.00173,32.00173,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-superCondensed"
      >
        <path
          d="M8.1239.00629a8.99036,8.99036,0,0,1,0,15.98742,7.99459,7.99459,0,0,0,0-15.98742Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-superCondensed"
      >
        <path
          d="M12,0A12.04272,12.04272,0,0,0,9.54236.25385a12.9792,12.9792,0,0,1,0,23.4923A12.00023,12.00023,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-superCondensed"
      >
        <path
          d="M16,0a16.06977,16.06977,0,0,0-3.18018.3183,17.98393,17.98393,0,0,1,0,31.3634A16.00042,16.00042,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-superCondensed"
      >
        <path
          d="M24,0a24.10312,24.10312,0,0,0-4.87646.49677,26.00454,26.00454,0,0,1,0,47.00646A24.00173,24.00173,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-superCondensed"
      >
        <path
          d="M32,0a32.14147,32.14147,0,0,0-6.34265.63116,35.99417,35.99417,0,0,1,0,62.73768A32.00167,32.00167,0,1,0,32,0Z"
        />
      </clipPath>
    </defs>
  </svg>
</span>
`;

exports[`avatar-bundle/AvatarBundle renders four avatars with overflow count 1`] = `
.emotion-11 {
  display: inline-grid;
}

.emotion-4 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  z-index: 3;
}

.emotion-9 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  margin-left: 28px;
  z-index: 2;
  -webkit-clip-path: url(#avatar-bundle-clip-medium-default);
  clip-path: url(#avatar-bundle-clip-medium-default);
}

.emotion-10 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  background-color: #eeeeee;
  color: #3c3c3c;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
  margin-left: 56px;
  z-index: 1;
  -webkit-clip-path: url(#avatar-bundle-clip-medium-default);
  clip-path: url(#avatar-bundle-clip-medium-default);
  font-family: ArtifaktElement,sans-serif;
}

.emotion-8 {
  background-color: #1d6328;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-2 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

.emotion-3 {
  background-color: #8f1d69;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  font-size: 14px;
}

.emotion-0 {
  border-radius: 50%;
  width: 32px;
  height: 32px;
}

<span
  className="emotion-11"
>
  <span
    className="emotion-4"
  >
    <span
      aria-label="Avatar for Jon Snow"
      className="emotion-3"
      role="img"
    >
      <span
        className="emotion-1"
      >
        <img
          alt="Avatar image of Jon Snow"
          className="emotion-0"
          onError={[Function]}
          src="http://placekitten.com/g/64/64"
        />
      </span>
      <span
        aria-hidden="true"
        className="emotion-2"
      >
        JS
      </span>
    </span>
  </span>
  <span
    className="emotion-9"
  >
    <span
      aria-label="Avatar for Anonymous User"
      className="emotion-8"
      role="img"
    >
      <span
        className="emotion-1"
      >
        <img
          alt="Avatar image of Anonymous User"
          className="emotion-0"
          onError={[Function]}
          src="http://placekitten.com/g/64/64"
        />
      </span>
      <span
        aria-hidden="true"
        className="emotion-2"
      >
        AU
      </span>
    </span>
  </span>
  <span
    className="emotion-10"
  >
    +2
  </span>
  <svg
    height="0"
    width="0"
  >
    <defs>
      <clipPath
        id="avatar-bundle-clip-extraSmall-default"
      >
        <path
          d="M8,0A7.99573,7.99573,0,0,0,.53192,5.15033,8.97416,8.97416,0,0,1,1,8a8.97444,8.97444,0,0,1-.46808,2.84967A7.99708,7.99708,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-default"
      >
        <path
          d="M12,0A11.96993,11.96993,0,0,0,2.62366,4.52277,12.92789,12.92789,0,0,1,5,12a12.92789,12.92789,0,0,1-2.37634,7.47723A11.997,11.997,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-default"
      >
        <path
          d="M16,0A15.95822,15.95822,0,0,0,3.21405,6.41034,17.89223,17.89223,0,0,1,6,16a17.89223,17.89223,0,0,1-2.78595,9.58966A15.99273,15.99273,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-default"
      >
        <path
          d="M24,0A23.9858,23.9858,0,0,0,3.13654,12.143,25.87787,25.87787,0,0,1,6,24,25.87787,25.87787,0,0,1,3.13654,35.857,23.99887,23.99887,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-default"
      >
        <path
          d="M32,0A31.97919,31.97919,0,0,0,4.2691,16.03931,35.8408,35.8408,0,0,1,8,32,35.84061,35.84061,0,0,1,4.2691,47.96069,31.99833,31.99833,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-condensed"
      >
        <path
          d="M8,0A7.96023,7.96023,0,0,0,2.70648,2.01288,8.95524,8.95524,0,0,1,5,8a8.9552,8.9552,0,0,1-2.29352,5.98706A7.99653,7.99653,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-condensed"
      >
        <path
          d="M12,0A11.93118,11.93118,0,0,0,4.77905,2.432,12.95059,12.95059,0,0,1,9,12a12.95073,12.95073,0,0,1-4.22089,9.568A11.99458,11.99458,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-condensed"
      >
        <path
          d="M16,0A15.89989,15.89989,0,0,0,7.7016,2.33929,17.947,17.947,0,0,1,14,16,17.947,17.947,0,0,1,7.70154,29.66071,15.99314,15.99314,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-condensed"
      >
        <path
          d="M24,0A23.882,23.882,0,0,0,11.783,3.34351,25.95309,25.95309,0,0,1,22,24,25.95318,25.95318,0,0,1,11.783,44.65649,23.99952,23.99952,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-condensed"
      >
        <path
          d="M32,0A31.84991,31.84991,0,0,0,15.38861,4.64447,35.91,35.91,0,0,1,28,32,35.91,35.91,0,0,1,15.38861,59.35553,32.00173,32.00173,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-superCondensed"
      >
        <path
          d="M8.1239.00629a8.99036,8.99036,0,0,1,0,15.98742,7.99459,7.99459,0,0,0,0-15.98742Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-superCondensed"
      >
        <path
          d="M12,0A12.04272,12.04272,0,0,0,9.54236.25385a12.9792,12.9792,0,0,1,0,23.4923A12.00023,12.00023,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-superCondensed"
      >
        <path
          d="M16,0a16.06977,16.06977,0,0,0-3.18018.3183,17.98393,17.98393,0,0,1,0,31.3634A16.00042,16.00042,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-superCondensed"
      >
        <path
          d="M24,0a24.10312,24.10312,0,0,0-4.87646.49677,26.00454,26.00454,0,0,1,0,47.00646A24.00173,24.00173,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-superCondensed"
      >
        <path
          d="M32,0a32.14147,32.14147,0,0,0-6.34265.63116,35.99417,35.99417,0,0,1,0,62.73768A32.00167,32.00167,0,1,0,32,0Z"
        />
      </clipPath>
    </defs>
  </svg>
</span>
`;

exports[`avatar-bundle/AvatarBundle renders three avatars with overflow count 1`] = `
.emotion-13 {
  display: inline-grid;
}

.emotion-4 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  z-index: 3;
}

.emotion-9 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  margin-left: 28px;
  z-index: 2;
  -webkit-clip-path: url(#avatar-bundle-clip-medium-default);
  clip-path: url(#avatar-bundle-clip-medium-default);
}

.emotion-12 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  margin-left: 56px;
  z-index: 1;
  -webkit-clip-path: url(#avatar-bundle-clip-medium-default);
  clip-path: url(#avatar-bundle-clip-medium-default);
}

.emotion-8 {
  background-color: #1d6328;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-2 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

.emotion-3 {
  background-color: #8f1d69;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  font-size: 14px;
}

.emotion-0 {
  border-radius: 50%;
  width: 32px;
  height: 32px;
}

<span
  className="emotion-13"
>
  <span
    className="emotion-4"
  >
    <span
      aria-label="Avatar for Jon Snow"
      className="emotion-3"
      role="img"
    >
      <span
        className="emotion-1"
      >
        <img
          alt="Avatar image of Jon Snow"
          className="emotion-0"
          onError={[Function]}
          src="http://placekitten.com/g/64/64"
        />
      </span>
      <span
        aria-hidden="true"
        className="emotion-2"
      >
        JS
      </span>
    </span>
  </span>
  <span
    className="emotion-9"
  >
    <span
      aria-label="Avatar for Anonymous User"
      className="emotion-8"
      role="img"
    >
      <span
        className="emotion-1"
      >
        <img
          alt="Avatar image of Anonymous User"
          className="emotion-0"
          onError={[Function]}
          src="http://placekitten.com/g/64/64"
        />
      </span>
      <span
        aria-hidden="true"
        className="emotion-2"
      >
        AU
      </span>
    </span>
  </span>
  <span
    className="emotion-12"
  >
    <span
      aria-label="Avatar for Jon Snow"
      className="emotion-3"
      role="img"
    >
      <span
        aria-hidden="true"
        className="emotion-2"
      >
        JS
      </span>
    </span>
  </span>
  <svg
    height="0"
    width="0"
  >
    <defs>
      <clipPath
        id="avatar-bundle-clip-extraSmall-default"
      >
        <path
          d="M8,0A7.99573,7.99573,0,0,0,.53192,5.15033,8.97416,8.97416,0,0,1,1,8a8.97444,8.97444,0,0,1-.46808,2.84967A7.99708,7.99708,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-default"
      >
        <path
          d="M12,0A11.96993,11.96993,0,0,0,2.62366,4.52277,12.92789,12.92789,0,0,1,5,12a12.92789,12.92789,0,0,1-2.37634,7.47723A11.997,11.997,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-default"
      >
        <path
          d="M16,0A15.95822,15.95822,0,0,0,3.21405,6.41034,17.89223,17.89223,0,0,1,6,16a17.89223,17.89223,0,0,1-2.78595,9.58966A15.99273,15.99273,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-default"
      >
        <path
          d="M24,0A23.9858,23.9858,0,0,0,3.13654,12.143,25.87787,25.87787,0,0,1,6,24,25.87787,25.87787,0,0,1,3.13654,35.857,23.99887,23.99887,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-default"
      >
        <path
          d="M32,0A31.97919,31.97919,0,0,0,4.2691,16.03931,35.8408,35.8408,0,0,1,8,32,35.84061,35.84061,0,0,1,4.2691,47.96069,31.99833,31.99833,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-condensed"
      >
        <path
          d="M8,0A7.96023,7.96023,0,0,0,2.70648,2.01288,8.95524,8.95524,0,0,1,5,8a8.9552,8.9552,0,0,1-2.29352,5.98706A7.99653,7.99653,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-condensed"
      >
        <path
          d="M12,0A11.93118,11.93118,0,0,0,4.77905,2.432,12.95059,12.95059,0,0,1,9,12a12.95073,12.95073,0,0,1-4.22089,9.568A11.99458,11.99458,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-condensed"
      >
        <path
          d="M16,0A15.89989,15.89989,0,0,0,7.7016,2.33929,17.947,17.947,0,0,1,14,16,17.947,17.947,0,0,1,7.70154,29.66071,15.99314,15.99314,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-condensed"
      >
        <path
          d="M24,0A23.882,23.882,0,0,0,11.783,3.34351,25.95309,25.95309,0,0,1,22,24,25.95318,25.95318,0,0,1,11.783,44.65649,23.99952,23.99952,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-condensed"
      >
        <path
          d="M32,0A31.84991,31.84991,0,0,0,15.38861,4.64447,35.91,35.91,0,0,1,28,32,35.91,35.91,0,0,1,15.38861,59.35553,32.00173,32.00173,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-superCondensed"
      >
        <path
          d="M8.1239.00629a8.99036,8.99036,0,0,1,0,15.98742,7.99459,7.99459,0,0,0,0-15.98742Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-superCondensed"
      >
        <path
          d="M12,0A12.04272,12.04272,0,0,0,9.54236.25385a12.9792,12.9792,0,0,1,0,23.4923A12.00023,12.00023,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-superCondensed"
      >
        <path
          d="M16,0a16.06977,16.06977,0,0,0-3.18018.3183,17.98393,17.98393,0,0,1,0,31.3634A16.00042,16.00042,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-superCondensed"
      >
        <path
          d="M24,0a24.10312,24.10312,0,0,0-4.87646.49677,26.00454,26.00454,0,0,1,0,47.00646A24.00173,24.00173,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-superCondensed"
      >
        <path
          d="M32,0a32.14147,32.14147,0,0,0-6.34265.63116,35.99417,35.99417,0,0,1,0,62.73768A32.00167,32.00167,0,1,0,32,0Z"
        />
      </clipPath>
    </defs>
  </svg>
</span>
`;

exports[`avatar-bundle/AvatarBundle renders with all props 1`] = `
.emotion-11 {
  display: inline-grid;
}

.emotion-4 {
  grid-area: 1 / 1 / 1;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 0 0 2px #D33E3E;
  z-index: 3;
}

.emotion-9 {
  grid-area: 1 / 1 / 1;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 0 0 2px #D33E3E;
  margin-left: 16px;
  z-index: 2;
}

.emotion-10 {
  grid-area: 1 / 1 / 1;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  box-shadow: 0 0 0 2px #D33E3E;
  background-color: #eeeeee;
  color: #3c3c3c;
  width: 48px;
  height: 48px;
  line-height: 48px;
  font-size: 24px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
  margin-left: 32px;
  z-index: 1;
  font-family: ArtifaktElement,sans-serif;
}

.emotion-3 {
  background-color: #8f1d69;
  color: #ffffff;
  width: 48px;
  height: 48px;
  line-height: 48px;
  font-size: 24px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  font-size: 24px;
}

.emotion-0 {
  border-radius: 50%;
  width: 48px;
  height: 48px;
}

.emotion-2 {
  width: 48px;
  height: 48px;
  font-family: ArtifaktElement,sans-serif;
}

.emotion-8 {
  background-color: #1d6328;
  color: #ffffff;
  width: 48px;
  height: 48px;
  line-height: 48px;
  font-size: 24px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

<span
  className="emotion-11 my-class-a my-class-b"
>
  <span
    className="emotion-4"
  >
    <span
      aria-label="Avatar for Jon Snow"
      className="emotion-3"
      role="img"
    >
      <span
        className="emotion-1"
      >
        <img
          alt="Avatar image of Jon Snow"
          className="emotion-0"
          onError={[Function]}
          src="http://placekitten.com/g/64/64"
        />
      </span>
      <span
        aria-hidden="true"
        className="emotion-2"
      >
        JS
      </span>
    </span>
  </span>
  <span
    className="emotion-9"
  >
    <span
      aria-label="Avatar for Anonymous User"
      className="emotion-8"
      role="img"
    >
      <span
        className="emotion-1"
      >
        <img
          alt="Avatar image of Anonymous User"
          className="emotion-0"
          onError={[Function]}
          src="http://placekitten.com/g/64/64"
        />
      </span>
      <span
        aria-hidden="true"
        className="emotion-2"
      >
        AU
      </span>
    </span>
  </span>
  <span
    className="emotion-10"
  >
    +2
  </span>
  <svg
    height="0"
    width="0"
  >
    <defs>
      <clipPath
        id="avatar-bundle-clip-extraSmall-default"
      >
        <path
          d="M8,0A7.99573,7.99573,0,0,0,.53192,5.15033,8.97416,8.97416,0,0,1,1,8a8.97444,8.97444,0,0,1-.46808,2.84967A7.99708,7.99708,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-default"
      >
        <path
          d="M12,0A11.96993,11.96993,0,0,0,2.62366,4.52277,12.92789,12.92789,0,0,1,5,12a12.92789,12.92789,0,0,1-2.37634,7.47723A11.997,11.997,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-default"
      >
        <path
          d="M16,0A15.95822,15.95822,0,0,0,3.21405,6.41034,17.89223,17.89223,0,0,1,6,16a17.89223,17.89223,0,0,1-2.78595,9.58966A15.99273,15.99273,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-default"
      >
        <path
          d="M24,0A23.9858,23.9858,0,0,0,3.13654,12.143,25.87787,25.87787,0,0,1,6,24,25.87787,25.87787,0,0,1,3.13654,35.857,23.99887,23.99887,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-default"
      >
        <path
          d="M32,0A31.97919,31.97919,0,0,0,4.2691,16.03931,35.8408,35.8408,0,0,1,8,32,35.84061,35.84061,0,0,1,4.2691,47.96069,31.99833,31.99833,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-condensed"
      >
        <path
          d="M8,0A7.96023,7.96023,0,0,0,2.70648,2.01288,8.95524,8.95524,0,0,1,5,8a8.9552,8.9552,0,0,1-2.29352,5.98706A7.99653,7.99653,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-condensed"
      >
        <path
          d="M12,0A11.93118,11.93118,0,0,0,4.77905,2.432,12.95059,12.95059,0,0,1,9,12a12.95073,12.95073,0,0,1-4.22089,9.568A11.99458,11.99458,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-condensed"
      >
        <path
          d="M16,0A15.89989,15.89989,0,0,0,7.7016,2.33929,17.947,17.947,0,0,1,14,16,17.947,17.947,0,0,1,7.70154,29.66071,15.99314,15.99314,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-condensed"
      >
        <path
          d="M24,0A23.882,23.882,0,0,0,11.783,3.34351,25.95309,25.95309,0,0,1,22,24,25.95318,25.95318,0,0,1,11.783,44.65649,23.99952,23.99952,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-condensed"
      >
        <path
          d="M32,0A31.84991,31.84991,0,0,0,15.38861,4.64447,35.91,35.91,0,0,1,28,32,35.91,35.91,0,0,1,15.38861,59.35553,32.00173,32.00173,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-superCondensed"
      >
        <path
          d="M8.1239.00629a8.99036,8.99036,0,0,1,0,15.98742,7.99459,7.99459,0,0,0,0-15.98742Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-superCondensed"
      >
        <path
          d="M12,0A12.04272,12.04272,0,0,0,9.54236.25385a12.9792,12.9792,0,0,1,0,23.4923A12.00023,12.00023,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-superCondensed"
      >
        <path
          d="M16,0a16.06977,16.06977,0,0,0-3.18018.3183,17.98393,17.98393,0,0,1,0,31.3634A16.00042,16.00042,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-superCondensed"
      >
        <path
          d="M24,0a24.10312,24.10312,0,0,0-4.87646.49677,26.00454,26.00454,0,0,1,0,47.00646A24.00173,24.00173,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-superCondensed"
      >
        <path
          d="M32,0a32.14147,32.14147,0,0,0-6.34265.63116,35.99417,35.99417,0,0,1,0,62.73768A32.00167,32.00167,0,1,0,32,0Z"
        />
      </clipPath>
    </defs>
  </svg>
</span>
`;

exports[`avatar-bundle/AvatarBundle renders with four avatars 1`] = `
.emotion-11 {
  display: inline-grid;
}

.emotion-2 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  z-index: 3;
}

.emotion-7 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  margin-left: 28px;
  z-index: 2;
  -webkit-clip-path: url(#avatar-bundle-clip-medium-default);
  clip-path: url(#avatar-bundle-clip-medium-default);
}

.emotion-10 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  margin-left: 56px;
  z-index: 1;
  -webkit-clip-path: url(#avatar-bundle-clip-medium-default);
  clip-path: url(#avatar-bundle-clip-medium-default);
}

.emotion-6 {
  background-color: #1d6328;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-0 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

.emotion-1 {
  background-color: #8f1d69;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-4 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  font-size: 14px;
}

.emotion-3 {
  border-radius: 50%;
  width: 32px;
  height: 32px;
}

<span
  className="emotion-11"
>
  <span
    className="emotion-2"
  >
    <span
      aria-label="Avatar for Jon Snow"
      className="emotion-1"
      role="img"
    >
      <span
        aria-hidden="true"
        className="emotion-0"
      >
        JS
      </span>
    </span>
  </span>
  <span
    className="emotion-7"
  >
    <span
      aria-label="Avatar for Anonymous User"
      className="emotion-6"
      role="img"
    >
      <span
        className="emotion-4"
      >
        <img
          alt="Avatar image of Anonymous User"
          className="emotion-3"
          onError={[Function]}
          src="http://placekitten.com/g/64/64"
        />
      </span>
      <span
        aria-hidden="true"
        className="emotion-0"
      >
        AU
      </span>
    </span>
  </span>
  <span
    className="emotion-10"
  >
    <span
      aria-label="Avatar for Jon Snow"
      className="emotion-1"
      role="img"
    >
      <span
        aria-hidden="true"
        className="emotion-0"
      >
        JS
      </span>
    </span>
  </span>
  <svg
    height="0"
    width="0"
  >
    <defs>
      <clipPath
        id="avatar-bundle-clip-extraSmall-default"
      >
        <path
          d="M8,0A7.99573,7.99573,0,0,0,.53192,5.15033,8.97416,8.97416,0,0,1,1,8a8.97444,8.97444,0,0,1-.46808,2.84967A7.99708,7.99708,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-default"
      >
        <path
          d="M12,0A11.96993,11.96993,0,0,0,2.62366,4.52277,12.92789,12.92789,0,0,1,5,12a12.92789,12.92789,0,0,1-2.37634,7.47723A11.997,11.997,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-default"
      >
        <path
          d="M16,0A15.95822,15.95822,0,0,0,3.21405,6.41034,17.89223,17.89223,0,0,1,6,16a17.89223,17.89223,0,0,1-2.78595,9.58966A15.99273,15.99273,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-default"
      >
        <path
          d="M24,0A23.9858,23.9858,0,0,0,3.13654,12.143,25.87787,25.87787,0,0,1,6,24,25.87787,25.87787,0,0,1,3.13654,35.857,23.99887,23.99887,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-default"
      >
        <path
          d="M32,0A31.97919,31.97919,0,0,0,4.2691,16.03931,35.8408,35.8408,0,0,1,8,32,35.84061,35.84061,0,0,1,4.2691,47.96069,31.99833,31.99833,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-condensed"
      >
        <path
          d="M8,0A7.96023,7.96023,0,0,0,2.70648,2.01288,8.95524,8.95524,0,0,1,5,8a8.9552,8.9552,0,0,1-2.29352,5.98706A7.99653,7.99653,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-condensed"
      >
        <path
          d="M12,0A11.93118,11.93118,0,0,0,4.77905,2.432,12.95059,12.95059,0,0,1,9,12a12.95073,12.95073,0,0,1-4.22089,9.568A11.99458,11.99458,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-condensed"
      >
        <path
          d="M16,0A15.89989,15.89989,0,0,0,7.7016,2.33929,17.947,17.947,0,0,1,14,16,17.947,17.947,0,0,1,7.70154,29.66071,15.99314,15.99314,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-condensed"
      >
        <path
          d="M24,0A23.882,23.882,0,0,0,11.783,3.34351,25.95309,25.95309,0,0,1,22,24,25.95318,25.95318,0,0,1,11.783,44.65649,23.99952,23.99952,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-condensed"
      >
        <path
          d="M32,0A31.84991,31.84991,0,0,0,15.38861,4.64447,35.91,35.91,0,0,1,28,32,35.91,35.91,0,0,1,15.38861,59.35553,32.00173,32.00173,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-superCondensed"
      >
        <path
          d="M8.1239.00629a8.99036,8.99036,0,0,1,0,15.98742,7.99459,7.99459,0,0,0,0-15.98742Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-superCondensed"
      >
        <path
          d="M12,0A12.04272,12.04272,0,0,0,9.54236.25385a12.9792,12.9792,0,0,1,0,23.4923A12.00023,12.00023,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-superCondensed"
      >
        <path
          d="M16,0a16.06977,16.06977,0,0,0-3.18018.3183,17.98393,17.98393,0,0,1,0,31.3634A16.00042,16.00042,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-superCondensed"
      >
        <path
          d="M24,0a24.10312,24.10312,0,0,0-4.87646.49677,26.00454,26.00454,0,0,1,0,47.00646A24.00173,24.00173,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-superCondensed"
      >
        <path
          d="M32,0a32.14147,32.14147,0,0,0-6.34265.63116,35.99417,35.99417,0,0,1,0,62.73768A32.00167,32.00167,0,1,0,32,0Z"
        />
      </clipPath>
    </defs>
  </svg>
</span>
`;

exports[`avatar-bundle/AvatarBundle renders with one avatar 1`] = `
.emotion-3 {
  display: inline-grid;
}

.emotion-2 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  z-index: 3;
}

.emotion-0 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

.emotion-1 {
  background-color: #8f1d69;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

<span
  className="emotion-3"
>
  <span
    className="emotion-2"
  >
    <span
      aria-label="Avatar for Jon Snow"
      className="emotion-1"
      role="img"
    >
      <span
        aria-hidden="true"
        className="emotion-0"
      >
        JS
      </span>
    </span>
  </span>
  <svg
    height="0"
    width="0"
  >
    <defs>
      <clipPath
        id="avatar-bundle-clip-extraSmall-default"
      >
        <path
          d="M8,0A7.99573,7.99573,0,0,0,.53192,5.15033,8.97416,8.97416,0,0,1,1,8a8.97444,8.97444,0,0,1-.46808,2.84967A7.99708,7.99708,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-default"
      >
        <path
          d="M12,0A11.96993,11.96993,0,0,0,2.62366,4.52277,12.92789,12.92789,0,0,1,5,12a12.92789,12.92789,0,0,1-2.37634,7.47723A11.997,11.997,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-default"
      >
        <path
          d="M16,0A15.95822,15.95822,0,0,0,3.21405,6.41034,17.89223,17.89223,0,0,1,6,16a17.89223,17.89223,0,0,1-2.78595,9.58966A15.99273,15.99273,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-default"
      >
        <path
          d="M24,0A23.9858,23.9858,0,0,0,3.13654,12.143,25.87787,25.87787,0,0,1,6,24,25.87787,25.87787,0,0,1,3.13654,35.857,23.99887,23.99887,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-default"
      >
        <path
          d="M32,0A31.97919,31.97919,0,0,0,4.2691,16.03931,35.8408,35.8408,0,0,1,8,32,35.84061,35.84061,0,0,1,4.2691,47.96069,31.99833,31.99833,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-condensed"
      >
        <path
          d="M8,0A7.96023,7.96023,0,0,0,2.70648,2.01288,8.95524,8.95524,0,0,1,5,8a8.9552,8.9552,0,0,1-2.29352,5.98706A7.99653,7.99653,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-condensed"
      >
        <path
          d="M12,0A11.93118,11.93118,0,0,0,4.77905,2.432,12.95059,12.95059,0,0,1,9,12a12.95073,12.95073,0,0,1-4.22089,9.568A11.99458,11.99458,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-condensed"
      >
        <path
          d="M16,0A15.89989,15.89989,0,0,0,7.7016,2.33929,17.947,17.947,0,0,1,14,16,17.947,17.947,0,0,1,7.70154,29.66071,15.99314,15.99314,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-condensed"
      >
        <path
          d="M24,0A23.882,23.882,0,0,0,11.783,3.34351,25.95309,25.95309,0,0,1,22,24,25.95318,25.95318,0,0,1,11.783,44.65649,23.99952,23.99952,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-condensed"
      >
        <path
          d="M32,0A31.84991,31.84991,0,0,0,15.38861,4.64447,35.91,35.91,0,0,1,28,32,35.91,35.91,0,0,1,15.38861,59.35553,32.00173,32.00173,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-superCondensed"
      >
        <path
          d="M8.1239.00629a8.99036,8.99036,0,0,1,0,15.98742,7.99459,7.99459,0,0,0,0-15.98742Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-superCondensed"
      >
        <path
          d="M12,0A12.04272,12.04272,0,0,0,9.54236.25385a12.9792,12.9792,0,0,1,0,23.4923A12.00023,12.00023,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-superCondensed"
      >
        <path
          d="M16,0a16.06977,16.06977,0,0,0-3.18018.3183,17.98393,17.98393,0,0,1,0,31.3634A16.00042,16.00042,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-superCondensed"
      >
        <path
          d="M24,0a24.10312,24.10312,0,0,0-4.87646.49677,26.00454,26.00454,0,0,1,0,47.00646A24.00173,24.00173,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-superCondensed"
      >
        <path
          d="M32,0a32.14147,32.14147,0,0,0-6.34265.63116,35.99417,35.99417,0,0,1,0,62.73768A32.00167,32.00167,0,1,0,32,0Z"
        />
      </clipPath>
    </defs>
  </svg>
</span>
`;

exports[`avatar-bundle/AvatarBundle renders with three avatars 1`] = `
.emotion-13 {
  display: inline-grid;
}

.emotion-2 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  z-index: 3;
}

.emotion-7 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  margin-left: 28px;
  z-index: 2;
  -webkit-clip-path: url(#avatar-bundle-clip-medium-default);
  clip-path: url(#avatar-bundle-clip-medium-default);
}

.emotion-12 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  margin-left: 56px;
  z-index: 1;
  -webkit-clip-path: url(#avatar-bundle-clip-medium-default);
  clip-path: url(#avatar-bundle-clip-medium-default);
}

.emotion-6 {
  background-color: #1d6328;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-0 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

.emotion-1 {
  background-color: #8f1d69;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-4 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  font-size: 14px;
}

.emotion-3 {
  border-radius: 50%;
  width: 32px;
  height: 32px;
}

<span
  className="emotion-13"
>
  <span
    className="emotion-2"
  >
    <span
      aria-label="Avatar for Jon Snow"
      className="emotion-1"
      role="img"
    >
      <span
        aria-hidden="true"
        className="emotion-0"
      >
        JS
      </span>
    </span>
  </span>
  <span
    className="emotion-7"
  >
    <span
      aria-label="Avatar for Anonymous User"
      className="emotion-6"
      role="img"
    >
      <span
        className="emotion-4"
      >
        <img
          alt="Avatar image of Anonymous User"
          className="emotion-3"
          onError={[Function]}
          src="http://placekitten.com/g/64/64"
        />
      </span>
      <span
        aria-hidden="true"
        className="emotion-0"
      >
        AU
      </span>
    </span>
  </span>
  <span
    className="emotion-12"
  >
    <span
      aria-label="Avatar for Jon Snow"
      className="emotion-1"
      role="img"
    >
      <span
        className="emotion-4"
      >
        <img
          alt="Avatar image of Jon Snow"
          className="emotion-3"
          onError={[Function]}
          src="http://placekitten.com/g/64/64"
        />
      </span>
      <span
        aria-hidden="true"
        className="emotion-0"
      >
        JS
      </span>
    </span>
  </span>
  <svg
    height="0"
    width="0"
  >
    <defs>
      <clipPath
        id="avatar-bundle-clip-extraSmall-default"
      >
        <path
          d="M8,0A7.99573,7.99573,0,0,0,.53192,5.15033,8.97416,8.97416,0,0,1,1,8a8.97444,8.97444,0,0,1-.46808,2.84967A7.99708,7.99708,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-default"
      >
        <path
          d="M12,0A11.96993,11.96993,0,0,0,2.62366,4.52277,12.92789,12.92789,0,0,1,5,12a12.92789,12.92789,0,0,1-2.37634,7.47723A11.997,11.997,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-default"
      >
        <path
          d="M16,0A15.95822,15.95822,0,0,0,3.21405,6.41034,17.89223,17.89223,0,0,1,6,16a17.89223,17.89223,0,0,1-2.78595,9.58966A15.99273,15.99273,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-default"
      >
        <path
          d="M24,0A23.9858,23.9858,0,0,0,3.13654,12.143,25.87787,25.87787,0,0,1,6,24,25.87787,25.87787,0,0,1,3.13654,35.857,23.99887,23.99887,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-default"
      >
        <path
          d="M32,0A31.97919,31.97919,0,0,0,4.2691,16.03931,35.8408,35.8408,0,0,1,8,32,35.84061,35.84061,0,0,1,4.2691,47.96069,31.99833,31.99833,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-condensed"
      >
        <path
          d="M8,0A7.96023,7.96023,0,0,0,2.70648,2.01288,8.95524,8.95524,0,0,1,5,8a8.9552,8.9552,0,0,1-2.29352,5.98706A7.99653,7.99653,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-condensed"
      >
        <path
          d="M12,0A11.93118,11.93118,0,0,0,4.77905,2.432,12.95059,12.95059,0,0,1,9,12a12.95073,12.95073,0,0,1-4.22089,9.568A11.99458,11.99458,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-condensed"
      >
        <path
          d="M16,0A15.89989,15.89989,0,0,0,7.7016,2.33929,17.947,17.947,0,0,1,14,16,17.947,17.947,0,0,1,7.70154,29.66071,15.99314,15.99314,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-condensed"
      >
        <path
          d="M24,0A23.882,23.882,0,0,0,11.783,3.34351,25.95309,25.95309,0,0,1,22,24,25.95318,25.95318,0,0,1,11.783,44.65649,23.99952,23.99952,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-condensed"
      >
        <path
          d="M32,0A31.84991,31.84991,0,0,0,15.38861,4.64447,35.91,35.91,0,0,1,28,32,35.91,35.91,0,0,1,15.38861,59.35553,32.00173,32.00173,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-superCondensed"
      >
        <path
          d="M8.1239.00629a8.99036,8.99036,0,0,1,0,15.98742,7.99459,7.99459,0,0,0,0-15.98742Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-superCondensed"
      >
        <path
          d="M12,0A12.04272,12.04272,0,0,0,9.54236.25385a12.9792,12.9792,0,0,1,0,23.4923A12.00023,12.00023,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-superCondensed"
      >
        <path
          d="M16,0a16.06977,16.06977,0,0,0-3.18018.3183,17.98393,17.98393,0,0,1,0,31.3634A16.00042,16.00042,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-superCondensed"
      >
        <path
          d="M24,0a24.10312,24.10312,0,0,0-4.87646.49677,26.00454,26.00454,0,0,1,0,47.00646A24.00173,24.00173,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-superCondensed"
      >
        <path
          d="M32,0a32.14147,32.14147,0,0,0-6.34265.63116,35.99417,35.99417,0,0,1,0,62.73768A32.00167,32.00167,0,1,0,32,0Z"
        />
      </clipPath>
    </defs>
  </svg>
</span>
`;

exports[`avatar-bundle/AvatarBundle renders with two avatars 1`] = `
.emotion-8 {
  display: inline-grid;
}

.emotion-2 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  z-index: 3;
}

.emotion-7 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  margin-left: 28px;
  z-index: 2;
  -webkit-clip-path: url(#avatar-bundle-clip-medium-default);
  clip-path: url(#avatar-bundle-clip-medium-default);
}

.emotion-6 {
  background-color: #1d6328;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-0 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

.emotion-1 {
  background-color: #8f1d69;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-4 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  font-size: 14px;
}

.emotion-3 {
  border-radius: 50%;
  width: 32px;
  height: 32px;
}

<span
  className="emotion-8"
>
  <span
    className="emotion-2"
  >
    <span
      aria-label="Avatar for Jon Snow"
      className="emotion-1"
      role="img"
    >
      <span
        aria-hidden="true"
        className="emotion-0"
      >
        JS
      </span>
    </span>
  </span>
  <span
    className="emotion-7"
  >
    <span
      aria-label="Avatar for Anonymous User"
      className="emotion-6"
      role="img"
    >
      <span
        className="emotion-4"
      >
        <img
          alt="Avatar image of Anonymous User"
          className="emotion-3"
          onError={[Function]}
          src="http://placekitten.com/g/64/64"
        />
      </span>
      <span
        aria-hidden="true"
        className="emotion-0"
      >
        AU
      </span>
    </span>
  </span>
  <svg
    height="0"
    width="0"
  >
    <defs>
      <clipPath
        id="avatar-bundle-clip-extraSmall-default"
      >
        <path
          d="M8,0A7.99573,7.99573,0,0,0,.53192,5.15033,8.97416,8.97416,0,0,1,1,8a8.97444,8.97444,0,0,1-.46808,2.84967A7.99708,7.99708,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-default"
      >
        <path
          d="M12,0A11.96993,11.96993,0,0,0,2.62366,4.52277,12.92789,12.92789,0,0,1,5,12a12.92789,12.92789,0,0,1-2.37634,7.47723A11.997,11.997,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-default"
      >
        <path
          d="M16,0A15.95822,15.95822,0,0,0,3.21405,6.41034,17.89223,17.89223,0,0,1,6,16a17.89223,17.89223,0,0,1-2.78595,9.58966A15.99273,15.99273,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-default"
      >
        <path
          d="M24,0A23.9858,23.9858,0,0,0,3.13654,12.143,25.87787,25.87787,0,0,1,6,24,25.87787,25.87787,0,0,1,3.13654,35.857,23.99887,23.99887,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-default"
      >
        <path
          d="M32,0A31.97919,31.97919,0,0,0,4.2691,16.03931,35.8408,35.8408,0,0,1,8,32,35.84061,35.84061,0,0,1,4.2691,47.96069,31.99833,31.99833,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-condensed"
      >
        <path
          d="M8,0A7.96023,7.96023,0,0,0,2.70648,2.01288,8.95524,8.95524,0,0,1,5,8a8.9552,8.9552,0,0,1-2.29352,5.98706A7.99653,7.99653,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-condensed"
      >
        <path
          d="M12,0A11.93118,11.93118,0,0,0,4.77905,2.432,12.95059,12.95059,0,0,1,9,12a12.95073,12.95073,0,0,1-4.22089,9.568A11.99458,11.99458,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-condensed"
      >
        <path
          d="M16,0A15.89989,15.89989,0,0,0,7.7016,2.33929,17.947,17.947,0,0,1,14,16,17.947,17.947,0,0,1,7.70154,29.66071,15.99314,15.99314,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-condensed"
      >
        <path
          d="M24,0A23.882,23.882,0,0,0,11.783,3.34351,25.95309,25.95309,0,0,1,22,24,25.95318,25.95318,0,0,1,11.783,44.65649,23.99952,23.99952,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-condensed"
      >
        <path
          d="M32,0A31.84991,31.84991,0,0,0,15.38861,4.64447,35.91,35.91,0,0,1,28,32,35.91,35.91,0,0,1,15.38861,59.35553,32.00173,32.00173,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-superCondensed"
      >
        <path
          d="M8.1239.00629a8.99036,8.99036,0,0,1,0,15.98742,7.99459,7.99459,0,0,0,0-15.98742Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-superCondensed"
      >
        <path
          d="M12,0A12.04272,12.04272,0,0,0,9.54236.25385a12.9792,12.9792,0,0,1,0,23.4923A12.00023,12.00023,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-superCondensed"
      >
        <path
          d="M16,0a16.06977,16.06977,0,0,0-3.18018.3183,17.98393,17.98393,0,0,1,0,31.3634A16.00042,16.00042,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-superCondensed"
      >
        <path
          d="M24,0a24.10312,24.10312,0,0,0-4.87646.49677,26.00454,26.00454,0,0,1,0,47.00646A24.00173,24.00173,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-superCondensed"
      >
        <path
          d="M32,0a32.14147,32.14147,0,0,0-6.34265.63116,35.99417,35.99417,0,0,1,0,62.73768A32.00167,32.00167,0,1,0,32,0Z"
        />
      </clipPath>
    </defs>
  </svg>
</span>
`;

exports[`avatar-bundle/AvatarBundle renders without props 1`] = `
.emotion-3 {
  display: inline-grid;
}

.emotion-2 {
  grid-area: 1 / 1 / 1;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  z-index: 3;
}

.emotion-1 {
  background-color: #1d6328;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-0 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

<span
  className="emotion-3"
>
  <span
    className="emotion-2"
  >
    <span
      aria-label="Avatar for Anonymous User"
      className="emotion-1"
      role="img"
    >
      <span
        aria-hidden="true"
        className="emotion-0"
      >
        AU
      </span>
    </span>
  </span>
  <svg
    height="0"
    width="0"
  >
    <defs>
      <clipPath
        id="avatar-bundle-clip-extraSmall-default"
      >
        <path
          d="M8,0A7.99573,7.99573,0,0,0,.53192,5.15033,8.97416,8.97416,0,0,1,1,8a8.97444,8.97444,0,0,1-.46808,2.84967A7.99708,7.99708,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-default"
      >
        <path
          d="M12,0A11.96993,11.96993,0,0,0,2.62366,4.52277,12.92789,12.92789,0,0,1,5,12a12.92789,12.92789,0,0,1-2.37634,7.47723A11.997,11.997,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-default"
      >
        <path
          d="M16,0A15.95822,15.95822,0,0,0,3.21405,6.41034,17.89223,17.89223,0,0,1,6,16a17.89223,17.89223,0,0,1-2.78595,9.58966A15.99273,15.99273,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-default"
      >
        <path
          d="M24,0A23.9858,23.9858,0,0,0,3.13654,12.143,25.87787,25.87787,0,0,1,6,24,25.87787,25.87787,0,0,1,3.13654,35.857,23.99887,23.99887,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-default"
      >
        <path
          d="M32,0A31.97919,31.97919,0,0,0,4.2691,16.03931,35.8408,35.8408,0,0,1,8,32,35.84061,35.84061,0,0,1,4.2691,47.96069,31.99833,31.99833,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-condensed"
      >
        <path
          d="M8,0A7.96023,7.96023,0,0,0,2.70648,2.01288,8.95524,8.95524,0,0,1,5,8a8.9552,8.9552,0,0,1-2.29352,5.98706A7.99653,7.99653,0,1,0,8,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-condensed"
      >
        <path
          d="M12,0A11.93118,11.93118,0,0,0,4.77905,2.432,12.95059,12.95059,0,0,1,9,12a12.95073,12.95073,0,0,1-4.22089,9.568A11.99458,11.99458,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-condensed"
      >
        <path
          d="M16,0A15.89989,15.89989,0,0,0,7.7016,2.33929,17.947,17.947,0,0,1,14,16,17.947,17.947,0,0,1,7.70154,29.66071,15.99314,15.99314,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-condensed"
      >
        <path
          d="M24,0A23.882,23.882,0,0,0,11.783,3.34351,25.95309,25.95309,0,0,1,22,24,25.95318,25.95318,0,0,1,11.783,44.65649,23.99952,23.99952,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-condensed"
      >
        <path
          d="M32,0A31.84991,31.84991,0,0,0,15.38861,4.64447,35.91,35.91,0,0,1,28,32,35.91,35.91,0,0,1,15.38861,59.35553,32.00173,32.00173,0,1,0,32,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraSmall-superCondensed"
      >
        <path
          d="M8.1239.00629a8.99036,8.99036,0,0,1,0,15.98742,7.99459,7.99459,0,0,0,0-15.98742Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-small-superCondensed"
      >
        <path
          d="M12,0A12.04272,12.04272,0,0,0,9.54236.25385a12.9792,12.9792,0,0,1,0,23.4923A12.00023,12.00023,0,1,0,12,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-medium-superCondensed"
      >
        <path
          d="M16,0a16.06977,16.06977,0,0,0-3.18018.3183,17.98393,17.98393,0,0,1,0,31.3634A16.00042,16.00042,0,1,0,16,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-large-superCondensed"
      >
        <path
          d="M24,0a24.10312,24.10312,0,0,0-4.87646.49677,26.00454,26.00454,0,0,1,0,47.00646A24.00173,24.00173,0,1,0,24,0Z"
        />
      </clipPath>
      <clipPath
        id="avatar-bundle-clip-extraLarge-superCondensed"
      >
        <path
          d="M32,0a32.14147,32.14147,0,0,0-6.34265.63116,35.99417,35.99417,0,0,1,0,62.73768A32.00167,32.00167,0,1,0,32,0Z"
        />
      </clipPath>
    </defs>
  </svg>
</span>
`;
